Fix text overflow in 'Quote' section

--- a/style.css
+++ b/style.css
@@ -139,30 +139,37 @@ img#card {
 
 /* phrase section */
 .quote {
-    background-color: #E5E7EB;
-    padding: 80px 0;
+    padding: 160px 0 0 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 16px;
-    margin: 100px 0;
+}
+
+.quote-box {
+    background-color: #E5E7EB;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 100px 0;
 }
 
 .phrase {
-    width: 750px;
+    width: 40%;
     font-size: 36px;
     font-style: italic;
     font-weight: lighter;
     color: #1F2937;
+    padding-bottom: 24px;
 }
 
 .author {
-    width: 700px;
     font-size: 20px;
     font-weight: 900;
-    text-align: right;
-    padding: 0 30px;
+    text-align: end;
+    width: 40%;
 }
 
 
